[tool.poetry]
name = "kiro"
version = "0.1.0"
description = "Challenge"
authors = ["Nghe Nicolas <nghe.nicolas@gmail.com>"]
packages = [{ include = "challenge", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
loguru = "^0.7.2"
lightgbm = "^4.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[tool.mypy]
files = ["challenge"]
strict = true
namespace_packages = true
explicit_package_bases = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
  "sklearn.*",
  "pandas.*",
  "seaborn.*",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
